--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-2/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-2/default.yaml
@@ -236,7 +236,7 @@ wso2::usermgt_datasource: wso2_user_db
 wso2::mb_store_datasource: wso2_mb_store_db
 
 wso2::file_list:
-  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+#  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
   - "repository/resources/security/%{hiera('wso2::key_store')}"
 
