--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
@@ -40,16 +40,16 @@ wso2::clustering:
         hostname: 192.168.57.247
         port: 4000
 
-wso2::dep_sync:
-  enabled: true
-  auto_checkout: true
-  auto_commit: false
-  repository_type: svn
-  svn:
-    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
-    user: samitha@wso2.com
-    password: password
-    append_tenant_id: true
+#wso2::dep_sync:
+#  enabled: true
+#  auto_checkout: true
+#  auto_commit: false
+#  repository_type: svn
+#  svn:
+#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
+#    user: samitha@wso2.com
+#    password: password
+#    append_tenant_id: true
 
 wso2::registry_mounts:
  wso2_config_db:
