--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-worker-dmz.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-worker-dmz.yaml
@@ -40,16 +40,16 @@ wso2::clustering:
         hostname: 192.168.57.218
         port: 4000
 
-wso2::dep_sync:
-  enabled: true
-  auto_checkout: true
-  auto_commit: false
-  repository_type: svn
-  svn:
-    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo-dmz
-    user: samitha@wso2.com
-    password: password
-    append_tenant_id: true
+#wso2::dep_sync:
+#  enabled: true
+#  auto_checkout: true
+#  auto_commit: false
+#  repository_type: svn
+#  svn:
+#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo-dmz
+#    user: samitha@wso2.com
+#    password: password
+#    append_tenant_id: true
 
 wso2::registry_mounts:
  wso2_config_db:
@@ -66,9 +66,9 @@ wso2::registry_mounts:
    registry_root: /
    enable_cache: true
 
-wso2::file_list:
-   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
-   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#wso2::file_list:
+#   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+#   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
