--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gateway-manager.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gateway-manager.yaml
@@ -41,16 +41,16 @@ wso2::clustering:
         hostname: 192.168.57.247
         port: 4000
 
-wso2::dep_sync:
-  enabled: true
-  auto_checkout: true
-  auto_commit: true
-  repository_type: svn
-  svn:
-    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
-    user: samitha@wso2.com
-    password: password
-    append_tenant_id: true
+#wso2::dep_sync:
+#  enabled: true
+#  auto_checkout: true
+#  auto_commit: true
+#  repository_type: svn
+#  svn:
+#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
+#    user: samitha@wso2.com
+#    password: password
+#    append_tenant_id: true
 
 wso2::registry_mounts:
  wso2_config_db:
@@ -75,11 +75,9 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://gw.dev.wso2.org:9443/acs
 
-
-
-wso2::file_list:
-   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
-   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#wso2::file_list:
+#   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+#   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
