--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
@@ -41,16 +41,16 @@ wso2::clustering:
         hostname: 192.168.57.247
         port: 4000
 
-wso2::dep_sync:
-  enabled: true
-  auto_checkout: true
-  auto_commit: false
-  repository_type: svn
-  svn:
-    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
-    user: samitha@wso2.com
-    password: password
-    append_tenant_id: true
+#wso2::dep_sync:
+#  enabled: true
+#  auto_checkout: true
+#  auto_commit: false
+#  repository_type: svn
+#  svn:
+#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
+#    user: samitha@wso2.com
+#    password: password
+#    append_tenant_id: true
 
 wso2::registry_mounts:
  wso2_config_db:
@@ -79,9 +79,9 @@ wso2::enable_thrift_server: false
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
 
-wso2::file_list:
-   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
-   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#wso2::file_list:
+#   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+#   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps/"
