--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
@@ -66,9 +66,9 @@ wso2::registry_mounts:
    registry_root: /
    enable_cache: true
 
-wso2::file_list:
-   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
-   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#wso2::file_list:
+#   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+#   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
