--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/gateway-manager.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/gateway-manager.yaml
@@ -75,9 +75,9 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://gw.dev.wso2.org:9443/acs
 
-wso2::file_list:
-   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
-   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#wso2::file_list:
+#   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+#   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
