--- a/wso2am_runtime/pom.xml
+++ b/wso2am_runtime/pom.xml
@@ -20,9 +20,9 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wso2.puppet</groupId>
-    <artifactId>wso2am-puppet-module</artifactId>
+    <artifactId>wso2am-runtime-puppet-module</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>WSO2 API Manager Puppet Module</name>
 
     <licenses>
