--- a/wso2is_prepacked/.pmtignore
+++ b/wso2is_prepacked/.pmtignore
@@ -1,6 +1,31 @@
-pkg/
-hieradata/
-.vagrant
-*.iml
-pom.xml
+# Puppet module related files
 package.xml
+pom.xml
+hieradata/
+
+# Eclipse Project Files
+.project
+.classpath
+.settings/
+.metadata
+
+# IntelliJ IDEA Project Files
+.idea/
+*.iml
+*.ipr
+*.iws
+*.swp
+
+#Backup files
+*~
+
+# puppet-modules
+*.zip
+*.gz
+*.tar
+*.jar
+
+target/
+
+# puppet packages
+pkg/
