--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-4/gateway-manager-env2.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-4/gateway-manager-env2.yaml
@@ -14,8 +14,8 @@
 
 ---
 wso2::mgt_hostname: dmz-mgt-gw.dev.wso2.org
-wso2::hostname: dmz-gw.dev.wso2.org
-wso2::product_profile: gateway-worker
+wso2::hostname: dmz-mgt-gw.dev.wso2.org
+wso2::product_profile: gateway-manager
 
 wso2::template_list:
   - repository/deployment/server/synapse-configs/default/api/_AuthorizeAPI_.xml
@@ -26,10 +26,11 @@ wso2::template_list:
 wso2::clustering:
   enabled: true
   domain: dmz-gw.am.wso2.domain
-  sub_domain: worker
+  sub_domain: mgt
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
 # WKA membership scheme
+  membership_scheme: wka
   membership_scheme: wka
   wka:
     members:
@@ -43,10 +44,10 @@ wso2::clustering:
 #wso2::dep_sync:
 #  enabled: true
 #  auto_checkout: true
-#  auto_commit: false
+#  auto_commit: true
 #  repository_type: svn
 #  svn:
-#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo-dmz
+#    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo-env2
 #    user: samitha@wso2.com
 #    password: password
 #    append_tenant_id: true
@@ -55,16 +56,24 @@ wso2::registry_mounts:
  wso2_config_db:
    path: /_system/config
    target_path: /_system/config
-   read_only: true
+   read_only: false
    registry_root: /
    enable_cache: true
 
  wso2_gov_db:
    path: /_system/governance
    target_path: /_system/governance
-   read_only: true
+   read_only: false
    registry_root: /
    enable_cache: true
+
+# SSO Configuration
+wso2::sso_authentication:
+  enabled: false
+  login_page: /carbon/admin/login.jsp
+  service_provider_id: wso2am-gw
+  sso_service_url: https://is.dev.wso2.org:9443/samlsso
+  consumer_service_url: https://dmz-gw.dev.wso2.org:9443/acs
 
 #wso2::file_list:
 #   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
@@ -85,14 +94,13 @@ wso2::remove_file_list:
 wso2::enable_thrift_server: false
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
+wso2::enable_advance_throttling: true
+wso2::enable_data_publisher: false
+wso2::enable_jms_connection_details: false
 wso2::disable_jms_event_parameters: true
 wso2::apply_gateway_specific_configurations: true
-wso2::enable_log_analyzer: true
 
 #wso2::ports:
 #  proxyPort:
 #    http: 80
 #    https: 443
-
-wso2::analytics:
-  enabled : true
